springboot简单返回页面的例子(页面打算用html，vue，js，react等、、、加油哦)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 server:
-  prot: 8081　　#配置访问的端口
+  prot: 8080　　#配置访问的端口
   servlet:
     context-path: /om
+spring:
+  mvc:
+    view:
+      prefix: /
+      suffix: .html
