vue 不能直接像js引入，用了前端项目学习vue，还行，devtools热部署不行，会在重启后有残留的java进程，没法运行。注释了

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  prot: 8080　　#配置访问的端口
+  port: 8080
   servlet:
     context-path: /om
 spring:
@@ -7,3 +7,5 @@ spring:
     view:
       prefix: /
       suffix: .html
+  thymeleaf:
+    cache: false
