--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: 8080
   servlet:
     context-path: /om
 spring:
@@ -9,3 +9,8 @@ spring:
       suffix: .html
   thymeleaf:
     cache: false
+  datasource:
+    url: jdbc:mysql://localhost:3306/company?serverTimezone=UTC&characterEncoding=utf-8
+    username: root
+    password: mysqlpwd
+    driver-class-name: com.mysql.cj.jdbc.Driver
