--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.2.5</version>
         </dependency>
+        <!-- 日志 -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.16</version><!--版本号自己选一个就行-->
+
+        </dependency>
     </dependencies>
 
 
