--- a/pom.xml
+++ b/pom.xml
@@ -106,8 +106,8 @@
         </dependency>
         <dependency>
             <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-spring</artifactId>
-            <version>1.4.0</version>
+            <artifactId>shiro-spring-boot-starter</artifactId>
+            <version>1.5.2</version>
         </dependency>
     </dependencies>
 
