字典功能调整

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -49,3 +49,7 @@ pagehelper:
   reasonable: true
   support-methods-arguments: true
   params: count=countSql
+#  mybatis 驼峰
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
