--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,18 @@
         <dependency>
             <groupId>com.alipay.api</groupId>
             <artifactId>alipay-sdk-java</artifactId>
-            <version>20170615110434</version>
+        </dependency>
+        <!--二维码 -->
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.glxn</groupId>
+            <artifactId>qrgen</artifactId>
+            <version>1.4</version>
         </dependency>
         <!-- 获取配置文件 -->
         <!--<dependency>
