加载支付宝参数

--- a/pom.xml
+++ b/pom.xml
@@ -79,8 +79,9 @@
 
         <!-- 支付宝  -->
         <dependency>
-            <groupId>com.alipay.api</groupId>
+            <groupId>com.alipay.sdk</groupId>
             <artifactId>alipay-sdk-java</artifactId>
+            <version>4.9.9</version>
         </dependency>
         <!--二维码 -->
         <dependency>
