--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,6 +3,12 @@ server:
   servlet:
     context-path: /om
 spring:
+  datasource:
+    username: root
+    password: mysql
+    type: com.alibaba.druid.pool.DruidDataSource
+    url: jdbc:mysql://127.0.0.1:3306/company?serverTimezone=UTC&characterEncoding=utf-8
+    driver-class-name: com.mysql.cj.jdbc.Driver
   # rabbitmq配置
   rabbitmq:
     host: 127.0.0.1
@@ -21,11 +27,6 @@ spring:
     static-path-pattern: /static/**/**
   thymeleaf:
     cache: false
-  datasource:
-    url: jdbc:mysql://127.0.0.1:3306/company?serverTimezone=UTC&characterEncoding=utf-8
-    username: root
-    password: mysql
-    driver-class-name: com.mysql.cj.jdbc.Driver
   redis:
     host: 127.0.0.1
     port: 6379
